2011-04-14 Santiago Ramos <sramos@sitiodistinto.net> Version 0.5.1

  * Bug en creacion de tabla de sesiones para instalaciones nuevas

2011-04-09 Santiago Ramos <sramos@sitiodistinto.net> Version 0.5

  * Controlador de Proveedores movido a seccion Productos
  * Controlador de Clientes movido a seccion TPV
  * Version de la app en la pagina web
  * Adaptaciones para empaquetado debian
  * Correccion de bug en borrado de facturas
  * Parametros de configuracion de la tienda en seccion Admin
  * Unificacion de metodos de calculo de precio bruto y
    precio con iva

2011-04-01 Santiago Ramos <sramos@sitiodistinto.net> Version 0.4

  * Cambios en tamaño de caracteres por campo para listados
  * Ventas por producto
  * Retoques en borrado de pagos de facturas
  * Las facturas se pueden borrar (convertir de nuevo en 
    albaranes abiertos) cuando no tienen pagos realizados.
  * Borrado de líneas de albaran cuando se borra un albaran
  * Información de cobro y cambio a devolver tras venta
  * Paginado de facturas y productos
  * Busqueda por titulo, autor, cantidad, codigo, editor y
    familia. La búsqueda se guarda en la sesión
  * Lineas de albaran contiene nombre del producto, iva y
    precio de venta (cuando sea una venta)

2011-03-25 Santiago Ramos <sramos@sitiodistinto.net> Version 0.3

  * Las lineas de albaran se pueden modificar
  * Productos comprados por cliente
  * Productos comprados a proveedor
  * Proveedores de productos
  * Las facturas se pueden borrar
  * Bug en formas de pago
  * Bug en precios vinculados para lineas de albaran

2011-03-25 Santiago Ramos <sramos@sitiodistinto.net> Version 0.2

  * Cambios en tipo de datos del codigo de producto y conditions
    de busqueda de albaranes por paso a MySQL
  * Formas de Pago
  * Errores en calculos de precios sin iva
  * Precio de compra automatico segun precio de venta 

2011-02-18 Santiago Ramos <sramos@sitiodistinto.net> Version 0.1 

  * Funcionalidad inicial de TPV con ventas, albaranes de 