@@ -9,7 +9,7 @@
 #
 # It's strongly recommended to check this file into your version control system.
 
-ActiveRecord::Schema.define(:version => 20110502193146) do
+ActiveRecord::Schema.define(:version => 20110503134745) do
 
   create_table "albaran_lineas", :force => true do |t|
     t.integer  "cantidad",                                      :default => 1
@@ -86,6 +86,7 @@ ActiveRecord::Schema.define(:version => 20110502193146) do
     t.integer  "iva_id"
     t.datetime "created_at"
     t.datetime "updated_at"
+    t.integer  "acumulable", :default => 0
   end
 
   create_table "forma_pagos", :force => true do |t|
